# UndertaleCZ-installer

./: README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/offline/: gog.patch  steam.patcha
src-tauri/src/: main.rs
src/assets/fonts/: stylesheet.css
src/js/: main.js
