[package]
name = "undertaleinstaller"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-file", "path-all", "shell-execute", "process-exit", "shell-open", "fs-write-file", "dialog-message", "shell-sidecar", "os-all", "fs-remove-file", "dialog-open", "dialog-ask", "dialog-confirm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52.0"
md5 = "0.7.0"
sha2 = "0.10.8"
dotenv = "0.15.0"
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
